string_view customization

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,9 @@ matrix:
           packages:
             - libboost-dev
             - libgdal-dev
-          sources:
-            - boost-latest
 
 before_install:
   - git clone https://github.com/catchorg/Catch2.git
 
 script:
-  - g++ -I ".." -I "/usr/include/gdal" -I "/usr/include/mysql" -I "/usr/include/postgresql" ./test/main.cpp ./test/second_translation_unit.cpp -lcurl -lgdal -lmysqlclient -lodbc -lproj -lpq -lspatialite -lsqlite3
+  - g++ -I ".." -I "/usr/include/gdal" -I "/usr/include/mysql" -I "/usr/include/postgresql" -I "../Catch2/single_include" ./test/main.cpp ./test/second_translation_unit.cpp -lcurl -lgdal -lmysqlclient -lodbc -lproj -lpq -lspatialite -lsqlite3
