--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ dist: trusty
 matrix:
   include:
     - os: linux
+      env: CXX=g++-7
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
+            - sourceline: 'ppa:ubuntugis/ppa'
           packages:
             - g++-7
             - libboost-dev
@@ -18,4 +19,6 @@ matrix:
 
 script:
   - wget https://raw.githubusercontent.com/catchorg/Catch2/v2.0.1/single_include/catch.hpp
-  - g++-7 -std=c++14 -I ".." -I "." -I "/usr/include/gdal" -I "/usr/include/mysql" -I "/usr/include/postgresql" ./test/main.cpp ./test/second_translation_unit.cpp -lcurl -lgdal -lmysqlclient -lodbc -lproj -lpq -lspatialite -lsqlite3
+  - cd ./test
+  - make -f ./makefile.ubuntu
+  - ./test
