--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
             - libboost-dev
             - libgdal-dev
             - libproj-dev
+            - qt5-default
 
 script:
   - cd ..
@@ -22,3 +23,6 @@ script:
   - cd ./bark/test
   - make -f ./makefile.ubuntu test CXX=g++-7
   - make -f ./makefile.ubuntu clean
+  - cd ../example/nanogis
+  - qmake -qt=qt5 QMAKE_CXX=g++-7 QMAKE_CC=g++-7 QMAKE_LINK=g++-7 QMAKE_CXXFLAGS+=-std=c++14 QMAKE_CFLAGS+=-std=c++14
+  - make CXX=g++-7 CC=g++-7 LINK=g++-7 CXXFLAGS+=-std=c++14 CFLAGS+=-std=c++14
