--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,4 @@ script:
   - make -f ./makefile.ubuntu clean
   - cd ../example/nanogis
   - qmake -qt=qt5 QMAKE_CXX=g++-7 QMAKE_CC=g++-7 QMAKE_LINK=g++-7 QMAKE_CXXFLAGS+=-std=c++14 QMAKE_CFLAGS+=-std=c++14
-  - make CXX=g++-7 CC=g++-7 LINK=g++-7 CXXFLAGS+=-std=c++14 CFLAGS+=-std=c++14
+  - make CXX=g++-7 CC=g++-7 LINK=g++-7 CXXFLAGS+=-std=c++14 CFLAGS+=-std=c++14 CXXFLAGS+=-fPIC CFLAGS+=-fPIC
