--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ dist: trusty
 matrix:
   include:
     - os: linux
+    - env: COMPILER=g++-7
       addons:
         apt:
           sources:
@@ -21,8 +22,8 @@ script:
   - cd ..
   - wget https://raw.githubusercontent.com/catchorg/Catch2/v2.0.1/single_include/catch.hpp
   - cd ./bark/test
-  - make -f ./makefile.ubuntu test CXX=g++-7
+  - make -f ./makefile.ubuntu test CXX=${COMPILER}
   - make -f ./makefile.ubuntu clean
   - cd ../example/nanogis
-  - qmake -qt=qt5 QMAKE_CXX=g++-7 QMAKE_CC=g++-7 QMAKE_LINK=g++-7
-  - make CXX=g++-7 CC=g++-7 LINK=g++-7 CXXFLAGS+=-fPIC CFLAGS+=-fPIC
+  - qmake -qt=qt5 QMAKE_CXX=${COMPILER} QMAKE_CC=${COMPILER} QMAKE_LINK=${COMPILER}
+  - make CXX=${COMPILER} CC=${COMPILER} LINK=${COMPILER} CXXFLAGS+=-fPIC CFLAGS+=-fPIC
