--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ clone_depth: 1
 
 install:
   - set QTDIR=C:\Qt\5.10.1\msvc2017_64
+  - set PATH=%PATH%;%QTDIR%\bin
   - '%QTDIR%\bin\qtenv2.bat'
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - mkdir C:\temp
