--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,10 +14,10 @@ shallow_clone: true
 clone_depth: 1
 
 install:
-  - mkdir C:\temp
   - mkdir %OSGEO4W_ROOT%
-  - ps: (new-object net.webclient).DownloadFile("http://download.osgeo.org/osgeo4w/osgeo4w-setup-x86_64.exe", "C:\temp\osgeo4w-setup.exe")
-  - C:\temp\osgeo4w-setup.exe -q -k -r -A -s http://download.osgeo.org/osgeo4w/ -a x86_64 -P curl,gdal,libmysql,libmysql-devel,libpq,proj,spatialite,sqlite3 -R %OSGEO4W_ROOT% > NUL
+  - wget -O %OSGEO4W_ROOT%\osgeo4w-setup-x86_64.exe http://download.osgeo.org/osgeo4w/osgeo4w-setup-x86_64.exe
+  - %OSGEO4W_ROOT%\osgeo4w-setup-x86_64.exe -q -k -r -A -s http://download.osgeo.org/osgeo4w/ -a x86_64 -P curl,gdal,libmysql,libmysql-devel,libpq,proj,spatialite,sqlite3 -R %OSGEO4W_ROOT%
+  - wget -O %OSGEO4W_ROOT%\include\catch.hpp https://raw.githubusercontent.com/catchorg/Catch2/v2.0.1/single_include/catch.hpp
   - call %OSGEO4W_ROOT%\bin\o4w_env.bat
   - call C:\Qt\5.10.1\msvc2017_64\bin\qtenv2.bat
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
@@ -30,8 +30,6 @@ build_script:
   - nmake
 
 test_script:
-  - cd %APPVEYOR_BUILD_FOLDER%/..
-  - ps: wget https://raw.githubusercontent.com/catchorg/Catch2/v2.0.1/single_include/catch.hpp
   - cd %APPVEYOR_BUILD_FOLDER%/test
   - nmake /f makefile.windows test
   - nmake /f makefile.windows clean
