--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ clone_depth: 1
 install:
   - mkdir %OSGEO4W_ROOT%
   - wget -O %OSGEO4W_ROOT%\osgeo4w-setup-x86_64.exe http://download.osgeo.org/osgeo4w/osgeo4w-setup-x86_64.exe
-  - %OSGEO4W_ROOT%\osgeo4w-setup-x86_64.exe -q -k -r -A -s http://download.osgeo.org/osgeo4w/ -a x86_64 -P curl,gdal,libmysql,libmysql-devel,libpq,proj,spatialite,sqlite3 -R %OSGEO4W_ROOT%
+  - call %OSGEO4W_ROOT%\osgeo4w-setup-x86_64.exe -q -k -r -A -s http://download.osgeo.org/osgeo4w/ -a x86_64 -P curl,gdal,libmysql,libmysql-devel,libpq,proj,spatialite,sqlite3 -R %OSGEO4W_ROOT%
   - wget -O %OSGEO4W_ROOT%\include\catch.hpp https://raw.githubusercontent.com/catchorg/Catch2/v2.0.1/single_include/catch.hpp
   - call %OSGEO4W_ROOT%\bin\o4w_env.bat
   - call C:\Qt\5.10.1\msvc2017_64\bin\qtenv2.bat
