--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: cpp
+
 sudo: true
+
 dist: trusty
+
+git:
+  depth: 1
 
 matrix:
   include:
@@ -19,12 +24,9 @@ matrix:
             - qt5-default
 
 script:
-  - cd ..
-  - wget https://raw.githubusercontent.com/catchorg/Catch2/v2.0.1/single_include/catch.hpp
-  - cd ./bark/test
+  - wget -P $TRAVIS_BUILD_DIR/.. https://raw.githubusercontent.com/catchorg/Catch2/v2.0.1/single_include/catch.hpp
+  - cd $TRAVIS_BUILD_DIR/test
   - make -f ./makefile.ubuntu test CXX=${COMPILER}
-  - make -f ./makefile.ubuntu clean
-  - cd ../example/nanogis
+  - cd $TRAVIS_BUILD_DIR/example/nanogis
   - qmake -qt=qt5 QMAKE_CXX=${COMPILER} QMAKE_CC=${COMPILER} QMAKE_LINK=${COMPILER}
   - make CXX=${COMPILER} CC=${COMPILER} LINK=${COMPILER} CXXFLAGS+=-fPIC CFLAGS+=-fPIC
-  - cd ../..
