--- a/appveyor.yml
+++ b/appveyor.yml
@@ -35,7 +35,7 @@ after_build:
   - copy %APPVEYOR_BUILD_FOLDER%\example\nanogis\release\nanogis.exe %NANOGIS_ROOT%
   - windeployqt --no-quick-import --no-translations --no-system-d3d-compiler --no-webkit2 --no-opengl-sw %NANOGIS_ROOT%\nanogis.exe
   - copy %OSGEO4W_ROOT%\bin\*.dll %NANOGIS_ROOT%
-  - 7z a nanogis.zip %NANOGIS_ROOT%
+  - call "C:\Program Files\7-Zip\7z.exe a nanogis.zip %NANOGIS_ROOT%"
 
 artifacts:
   - path: nanogis.zip
@@ -43,4 +43,3 @@ artifacts:
 deploy:
   provider: GitHub
   artifact: nanogis.zip
-  
