--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,12 +33,12 @@ test_script:
 after_build:
   - mkdir %NANOGIS_ROOT%
   - copy %APPVEYOR_BUILD_FOLDER%\example\nanogis\release\nanogis.exe %NANOGIS_ROOT%
-  - windeployqt --no-quick-import --no-translations --no-system-d3d-compiler --no-webkit2 --no-opengl-sw %NANOGIS_ROOT%\nanogis.exe
-  - copy %OSGEO4W_ROOT%\bin\*.dll %NANOGIS_ROOT%
+  - windeployqt --no-quick-import --no-translations --no-system-d3d-compiler --no-webkit2 --no-opengl-sw %NANOGIS_ROOT%\nanogis.exe > NUL
+  - copy %OSGEO4W_ROOT%\bin\*.dll %NANOGIS_ROOT% > NUL
   - call "C:\Program Files\7-Zip\7z.exe" a %APPVEYOR_BUILD_FOLDER%\example\nanogis.zip %NANOGIS_ROOT%
 
 artifacts:
-  - path: $(APPVEYOR_BUILD_FOLDER)\example\nanogis.zip
+  - path: example\nanogis.zip
     name: nanogis.zip
 
 deploy:
