--- a/appveyor.yml
+++ b/appveyor.yml
@@ -44,3 +44,5 @@ artifacts:
 deploy:
   provider: GitHub
   artifact: nanogis.zip
+  auth_token:
+    secure: 065444c6053a95917a997f028f02e8a28eed99e2
