--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,13 +7,14 @@ configuration: Release
 clone_depth: 1
 
 environment:
-  OSGEO4W_ROOT: C:\\OSGeo4W64
-  NANOGIS_ROOT: C:\\nanogis
+  OSGEO4W_ROOT: C:\OSGeo4W64
+  NANOGIS_ROOT: C:\nanogis
 
 install:
   - mkdir %OSGEO4W_ROOT%
   - ps: Invoke-WebRequest -Uri http://download.osgeo.org/osgeo4w/osgeo4w-setup-x86_64.exe -OutFile $env:OSGEO4W_ROOT\osgeo4w-setup-x86_64.exe
   - call %OSGEO4W_ROOT%\osgeo4w-setup-x86_64.exe -q -k -r -A -s http://download.osgeo.org/osgeo4w/ -a x86_64 -P curl,gdal,libmysql,libmysql-devel,libpq,proj,spatialite,sqlite3 -R %OSGEO4W_ROOT% > NUL
+  - del /Q /F %OSGEO4W_ROOT%\boost*.dll
   - ps: Invoke-WebRequest -Uri https://raw.githubusercontent.com/catchorg/Catch2/v2.0.1/single_include/catch.hpp -OutFile $env:OSGEO4W_ROOT\include\catch.hpp
   - call %OSGEO4W_ROOT%\bin\o4w_env.bat
   - call C:\Qt\5.10.1\msvc2017_64\bin\qtenv2.bat
