--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,14 @@ matrix:
 script:
   - mkdir $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR
   - mkdir $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN
+  - echo 'Package: nanogis' > $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN/control
+  - echo 'Version: 0.0.1' >> $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN/control
+  - echo 'Section: base' >> $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN/control
+  - echo 'Priority: optional' >> $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN/control
+  - echo 'Architecture: amd64' >> $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN/control
+  - echo 'Depends: libqt5concurrent5, libqt5core5a, libqt5gui5, libqt5widgets5, libgdal20' >> $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN/control
+  - echo 'Maintainer: Andrew Naplavkov <andrew.naplavkov@gmail.com>' >> $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN/control
+  - echo 'Description: nanogis' >> $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/DEBIAN/control
   - mkdir $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/usr
   - mkdir $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/usr/local
   - mkdir $TRAVIS_BUILD_DIR/example/$NANOGIS_DEB_DIR/usr/local/bin
