--- a/control
+++ b/control
@@ -1,8 +1,8 @@
 Package: nanogis
-Version: 0.0.1
+Version: 1.0.0
 Section: base
 Priority: optional
 Architecture: amd64
-Depends: libqt5concurrent5, libqt5core5a, libqt5gui5, libqt5widgets5, libgdal20
+Depends: libcurl3, libgdal20, libmysqlclient18, libodbc1, libproj0, libpq5, libqt5concurrent5, libqt5core5a, libqt5gui5, libqt5widgets5, libspatialite5, libsqlite3
 Maintainer: Andrew Naplavkov <andrew.naplavkov@gmail.com>
 Description: nanogis
