--- a/control
+++ b/control
@@ -3,6 +3,6 @@ Version: 1.0.0
 Section: base
 Priority: optional
 Architecture: amd64
-Depends: libcurl3, libgdal20, libmysqlclient18, libodbc1, libproj0, libpq5, libqt5concurrent5, libqt5core5a, libqt5gui5, libqt5widgets5, libspatialite5, libsqlite3-0
+Depends: g++-7 libcurl3, libgdal20, libmysqlclient18, libodbc1, libproj0, libpq5, libqt5concurrent5, libqt5core5a, libqt5gui5, libqt5widgets5, libspatialite5, libsqlite3-0
 Maintainer: Andrew Naplavkov <andrew.naplavkov@gmail.com>
 Description: nanogis
