--- a/test/makefile.windows
+++ b/test/makefile.windows
@@ -1,4 +1,4 @@
-CXXFLAGS=/EHsc /bigobj /std:c++17 /O2 $(CXXFLAGS)
+CXXFLAGS=/std:c++17 /EHsc /bigobj /O2 /W2 $(CXXFLAGS)
 EXECUTABLE=run_me.exe
 INCLUDE=..\..\;$(INCLUDE)
 LIBS=gdal_i.lib libcurl.lib libmysql.lib libpq.lib odbc32.lib proj_i.lib spatialite_i.lib sqlite3_i.lib
